# lab_5

./: CMakeLists.txt  Cmake.txt
.github/workflows/: ci.yml
tests/: test.cpp
